--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,9 +16,35 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+// Define versions in a single place
+ext {
+    // Sdk and tools
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.3'
+    minSdkVersion = 19
+    targetSdkVersion = 25
+
+    // App dependencies
+    supportLibraryVersion = '28.0.0'
+    constraintLayoutVersion = '1.1.2'
+
+    smartrefreshVersion = '1.0.5.1'
+    glideVersion = '4.0.0'
+    lottieVersion = '2.5.0-beta3'
+    loggerVersion = '2.2.0'
+    okgoVersion = '3.0.4'
+    fastjsonVersion = '1.2.46'
+    eventbusVersion = '3.1.1'
+    crashreportVersion = '2.6.6.1'
+    nativecrashreportVersion = '3.3.1'
+    leakcanaryVersion = '1.5.4'
+
 }
